@@ -12,6 +12,7 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDate;
+import java.time.format.DateTimeFormatter;
 import java.util.*;
 import ProjectPortal.Service.SubprojectService;
 
@@ -112,13 +113,20 @@ public class ProjectController {
         for (Subproject s : subprojects){
             subprojectData.add(List.of(s.getSubprojectName(),s.getHoursAllocated()));
         }
-        subprojectData.add(List.of("test",300));
+        //subprojectData.add(List.of("test",300));
         // timeline chart (gantt)
         List<List<Object>> subprojectGantt = new ArrayList<>();
         LocalDate startDate = LocalDate.of(2024,10,10);
         LocalDate endDate = LocalDate.of(2025,10,10);
-        subprojectGantt.add(Arrays.asList("Eat","Me",projectService.formatForJavaScript(startDate),projectService.formatForJavaScript(endDate)));
-        subprojectGantt.add(Arrays.asList("Drink","Me",projectService.formatForJavaScript(startDate),projectService.formatForJavaScript(endDate)));
+        DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
+        for (Subproject s : subprojects){
+            subprojectGantt.add(List.of("Subproject ID: " + s.getSubprojectId(), s.getSubprojectName(), s.getStartDate().format(dateTimeFormatter),s.getEndDate().format(dateTimeFormatter)));
+        }
+        //subprojectGantt.add(List.of("Subproject ID: 3", "input", startDate.format(dateTimeFormatter), endDate.format(dateTimeFormatter)));
+
+
+       // subprojectGantt.add(Arrays.asList("Eat","Me",projectService.formatForJavaScript(startDate),projectService.formatForJavaScript(endDate)));
+        //subprojectGantt.add(Arrays.asList("Drink","Me",projectService.formatForJavaScript(startDate),projectService.formatForJavaScript(endDate)));
 
         System.out.println(subprojectGantt);
         //Pie estimated cost
